# jwst

./: .bandit.yaml  .clang-format  .codecov.yml  .coveragerc  .cruft.json  .flake8  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .rtd-requirements.txt  .ruff.toml  .travis.yml  AI_POLICY.md  CHANGES.rst  CITATION.cff  CODEOWNERS  CODEOWNERS.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  Jenkinsfile-disabled  JenkinsfileRT  JenkinsfileRT-dev  JenkinsfileRT-sdp  JenkinsfileRT_Unstable  JenkinsfileRT_dev  JenkinsfileRT_jde  JenkinsfileRT_new  JenkinsfileRT_nopub  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  README_pypi.rst  TESTING.md  (+31 more)
.github/: CODEOWNERS  actionlint.yml  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: config.yml  release.yml
.github/workflows/: build.yml  cancel_workflows.yml  changelog.yml  ci.yml  ci_cron.yml  codeql-analysis.yml  contexts.yml  data.yml  label.yml  label_pull_request.yml  publish-to-pypi.yml  tests.yml  tests_devdeps.yml  tests_extra.yml  tests_regression.yml  tests_scheduled.yml  update.yml
changes/: 10002.background.rst  10004.residual_fringe.rst  10006.general.rst  10010.other.rst  10011.associations.rst  10011.pipeline.rst  10011.targ_centroid.rst  10022.extract_1d.rst  10024.breaking.rst  10042.breaking.rst  10043.tweakreg.rst  10050.assign_mtwcs.rst  10057.breaking.rst  10065.general.rst  10066.adaptive_trace_model.rst  10066.fit_profile.rst  10078.extract_2d.rst  10085.rscd.rst  10091.persistence.rst  10094.associations.rst  10100.dq_init.rst  10105.extract_1d.rst  10106.breaking.rst  10107.associations.rst  10117.assign_wcs.rst  10124.associations.rst  10131.background.rst  10137.outlier_detection.rst  10137.resample.rst  10141.residual_fringe.rst  10144.background.rst  10153.breaking.rst  10164.other.rst  10199.photom.rst  10202.klip.rst  10222.emicorr.rst  10234.resample.rst  10240.extract_1d.rst  10241.bacgkround.rst  10245.other.rst  (+439 more)
docs/: Makefile  README.md  conf.py  conftest.py  index.rst  make.bat  mkdocs.sh  rtd-pip-requirements  rtd_environment.yaml
docs/_static/: c1  custom.css
docs/_templates/: layout.html
docs/associations/: Makefile  make.bat
docs/csv_tools/: Makefile  make.bat
docs/datamodels/: Makefile  make.bat
docs/exp_to_source/: Makefile
docs/exts/: numfig.py
docs/fits_generator/: Makefile  make.bat
docs/getting_started/: contributing.rst  install.rst  quickstart.rst
docs/ipc/: README
docs/jwst/: LICENSE.rst  cfg_deprecation.rst  changes.rst  faq.rst  introduction.rst  package_index.rst  pub_deprecation.rst  reference-file-formats-documentation.rst
docs/nircam_mosaic/: Makefile  make.bat
docs/pipeline/: Makefile
docs/skymatch/: Makefile
docs/straylight/: README
docs/user_guide/: Makefile  make.bat
jwst/: Associations.code-workspace  __init__.py  cal_ver_steps.py  conftest.py  jwst.code-workspace  step.py  steps.py
jwst/adaptive_trace_model/: __init__.py  adaptive_trace_model_step.py  bspline.py  trace_model.py
jwst/ami/: InstrumentData.py  LG_Model.py  NRM_Model.py  NRM_consts.py  __init__.py  ami_analyze.py  ami_analyze_step.py  ami_average.py  ami_average_step.py  ami_normalize.py  ami_normalize_step.py  analyticnrm2.py  bp_fix.py  find_affine2d_parameters.py  hexee.py  hextransformEE.py  hextransformee.py  instrument_data.py  leastsqnrm.py  lg_model.py  mask_definition_ami.py  mask_definitions.py  matrix_dft.py  nrm_consts.py  nrm_core.py  nrm_model.py  oifits.py  subpix.py  utils.py  webb_psf.py
jwst/assign_mtwcs/: __init__.py  assign_mtwcs_step.py  moving_target_wcs.py
jwst/assign_wcs/: __init__.py  assign_wcs.py  assign_wcs_step.py  fgs.py  miri.py  nircam.py  niriss.py  nirspec.py  pointing.py  util.py
jwst/associations/: __init__.py  asn_edit.py  asn_from_list.py  asn_gather.py  association.py  association_io.py  config.py  error.py  exceptions.py  format_template.py  generate.py  generate_per_candidate.py  load_as_asn.py  load_asn.py  main.py  mkpool.py  pool.py  registry.py
jwst/background/: __init__.py  asn_intake.py  background_step.py  background_sub.py  background_sub_soss.py  background_sub_wfss.py  subtract_images.py  subtract_images_step.py  weighted_sigma_clip.py
jwst/badpix_selfcal/: __init__.py  badpix_selfcal.py  badpix_selfcal_step.py
jwst/barshadow/: __init__.py  bar_shadow.py  barshadow_step.py
jwst/charge_migration/: __init__.py  charge_migration.py  charge_migration_step.py
jwst/clean_flicker_noise/: __init__.py  autoparam.py  background_level.py  clean_flicker_noise.py  clean_flicker_noise_step.py  lib.py  tso_median_image.py
jwst/clean_noise/: __init__.py  clean_noise.py  clean_noise_step.py  lib.py
jwst/combine_1d/: __init__.py  _fileio.py  combine1d.py  combine_1d_step.py  temp_wcs.py
jwst/coron/: __init__.py  align_refs_step.py  hlsp.py  hlsp_step.py  imageregistration.py  klip.py  klip_step.py  median_replace_img.py  smooth_psf.py  stack_refs.py  stack_refs_step.py
jwst/csv_tools/: __init__.py  csv_to_hdulist.py  csv_to_table.py  csvconvert.py  table_to_hdulist.py  table_to_json.py
jwst/cube_build/: CubeCloud.py  CubeD2C.py  CubeOverlap.py  InstrumentDefaults.py  __init__.py  blot_cube.py  blot_cube_build.py  blot_cube_build_new.py  coord.py  cube.py  cube_build.py  cube_build_io.py  cube_build_io_util.py  cube_cloud.py  (+15 more)
pytest_crds/: plugin.py
pytest_jwst/: __init__.py  plugin.py
scripts/: asn_edit  asn_from_list  asn_gather  asn_generate  asn_make_pool  assign_wcs  collect_pipeline_cfgs  coron  create_data  csvconvert  cube_build  dark_current  data_generate  dqinit  echo_crds_context  exp_to_source  flatfieldcorr  fringecorr  get_cal_vers  ipc  jump  launch.json  linearitycorr  make_header  migrate_data  minimum_deps  move_wcs.py  okify_regression_tests.py  okify_regtests  outlier_detection  persistencecorr  photomcorr  pointing_summary  pointing_verification.py  rampfitcorr  refpix  resample  runjwpsf.py  saturationcorr  schema_editor  (+12 more)
tests/: test_set_telescope_pointing.py
(+7017 files in other folders)
