[project]
name = "jwst"
description = "Library for calibration of science observations from the James Webb Space Telescope"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license-files = ["LICENSE"]
authors = [
  { name = "JWST calibration pipeline developers" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "BayesicFitting>=3.2.2",
  "asdf>=4.2,<6",
  "astropy>=6.1.4",
  "crds>=12.0.3,!=13.1.15",
  "gwcs>=1.0.3,<2",
  "importlib-metadata>=4.11.4",
  "jsonschema>=4.8",
  "numpy>=2.0",
  "packaging>=23.0",
  "photutils>=3.0,<4",
  "pyyaml>=6",
  "requests>=2.31",
  "scikit-image>=0.23.0",
  "scipy>=1.14.1",
  # "stdatamodels>=4.1.0,<4.2.0",
  "stcal @ git+https://github.com/spacetelescope/stcal.git@main",
  # "stdatamodels>=5.0.1,<6",
  "stdatamodels @ git+https://github.com/spacetelescope/stdatamodels.git@main",
  # "stcal>=1.18,<2",
  # "stpipe>=0.12,<2",
  "stpipe @ git+https://github.com/spacetelescope/stpipe.git@main",
  "synphot>=1.3",
  "tweakwcs>=0.9.0,<0.10",
]
dynamic = [
  "version",
]

[project.urls]
documentation = "https://jwst-pipeline.readthedocs.io"
repository = "https://github.com/spacetelescope/jwst"

[project.scripts]
adjust_wcs = "jwst.scripts.adjust_wcs:main"
asn_edit = "jwst.scripts.asn_edit:main"
asn_from_list = "jwst.associations.asn_from_list:main"
asn_gather = "jwst.scripts.asn_gather:main"
asn_generate = "jwst.associations.main:main"
asn_make_pool = "jwst.scripts.asn_make_pool:main"
collect_pipeline_cfgs = "jwst.scripts.collect_pipeline_cfgs:main"
exp_to_source = "jwst.exp_to_source.main:Main"
pointing_summary = "jwst.scripts.pointing_summary:main"
set_telescope_pointing = "jwst.scripts.set_telescope_pointing:main"
"set_telescope_pointing.py" = "jwst.scripts.set_telescope_pointing:deprecated_name"
set_velocity_aberration = "jwst.scripts.set_velocity_aberration:main"
"set_velocity_aberration.py" = "jwst.scripts.set_velocity_aberration:deprecated_name"
stfitsdiff = "jwst.scripts.stfitsdiff:main"
v1_calculate = "jwst.scripts.v1_calculate:main"
world_coords = "jwst.scripts.world_coords:main"

[project.entry-points."stpipe.steps"]
jwst = "jwst.stpipe.integration:get_steps"

[project.optional-dependencies]
contrib = [
  "pre-commit>=4.1.0",
  "jwst[test, docs]",
]
docs = [
  "matplotlib",
  "numpydoc",
  "pytest-doctestplus>=0.11",
  "sphinx",
  "sphinx-automodapi",
  "sphinx-rtd-theme",
  "sphinxcontrib-jquery",
]
sdp = [
  "jplephem>=2.9",
  "pysiaf>=0.13.0",
]
test = [
  "ci-watson>=0.10",
  "pysiaf>=0.13.0",
  "pytest>=9",
  "pytest-cov>=2.9.0",
  "pytest-doctestplus>=0.10.0",
  "requests_mock>=1.0",
]

[build-system]
requires = [
  "numpy>=2.0",
  "setuptools>=61.2",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.build-sphinx]
source-dir = "docs"
build-dir = "docs"
all_files = "1"

[tool.cibuildwheel]
build = "cp3*"
skip = ["cp314t-*"]  # explicitly skip free-threaded builds
test-command = 'python -c "from jwst.lib import winclip; from jwst.cube_build import cube_match_internal, cube_match_sky_pointcloud, cube_match_sky_driz, blot_median; from jwst.straylight import calc_xart"'

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]

[tool.codespell]
skip = "*.c, *.fits, *.asdf, ./build, ./docs/_build, CHANGES.rst"
ignore-words-list = "indx, delt, Shepard, tread, usig"

[tool.coverage.run]
omit = [
  "config.py",
  "config-3.py",
  "jwst/conftest.py",
  "jwst/setup.py",
  "jwst/tests/test*",
  "jwst/regtest/test*",
  "jwst/regtest/associations_sdp_pools/*",
  "jwst/*/tests/*",
  "docs/*",
  "*/jwst/conftest.py",
  "*/jwst/setup.py",
  "*/jwst/tests/test*",
  "*/jwst/regtest/test*",
  "*/jwst/regtest/associations_sdp_pools/*",
  "*/jwst/*/tests/*",
  "*/docs/*",
  "*.rmap",
  "*.pmap",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if self.debug:",
  "except ImportError",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == '__main__':",
]
omit = [
  "*.rmap",
  "*.pmap",
]

[tool.distutils.upload_docs]
upload-dir = "docs/_build/html"
show-response = 1

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disable_error_code = "import-untyped"  # do not check imports
exclude = ["build"]
python_version = "3.11"

[[tool.mypy.overrides]]
# don't complain about the installed c parts of this library
module = [
  "jwst.cube_build.cube_match_internal",
  "jwst.cube_build.cube_match_sky_driz",
  "jwst.cube_build.cube_match_sky_pointcloud",
  "jwst.lib.winclip",
  "jwst.straylight.calc_xart",
]
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all",
  "EX01",  # No examples section found
  "SA01",  # See Also section not found
  "ES01",  # No extended summary found
  "GL08",  # Object does not have a docstring. Ruff catches these, and allows more granular ignores.
  "PR01",  # Parameters not documented. Already caught by ruff.
  "PR09",  # Parameter description should finish with a period
  "RT02",  # First line of return should contain only the type
  "RT05",  # Return value description should finish with a period
]

[tool.pytest]
addopts = [
  "--color=yes",
  "--show-capture=no",
  "-p no:legacypath",
]
filterwarnings = [
  "error",
  # https://github.com/spacetelescope/gwcs/issues/738
  "ignore:Calling .*lu_.* with arguments of dtype=float:DeprecationWarning",
]
junit_family = "xunit2"
minversion = "9"
norecursedirs = [
  ".eggs",
  ".tox",
  "build",
  "docs/_build",
  "docs/exts",
  "jwst/associations/tests/data",
  "scripts",
  "venv",
]
strict_xfail = true
inputs_root = "jwst-pipeline"
results_root = "jwst-pipeline-results"
text_file_format = "rst"
doctest_plus = "enabled"
doctest_rst = "enabled"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
include = ["jwst*"]

[tool.setuptools.package-data]
"*" = [
  "*.asdf",
  "*.cfg",
  "tests/data/*.csv",
  "tests/data/*.ecsv",
  "tests/data/*.fits",
  "tests/data/**/*.fits",
  "*.json",
  "tests/data/*.json",
  "tests/data/**/*.json",
  "tests/data/*.txt",
  "*.yaml",
  "*.cat",
  "*.hdr",
]
"jwst.lib.tests" = [
  "data/*.asdf",
  "data/**/*.db",
  "data/**/*.xml",
  "data/*.ecsv",
  "data/*.fits",
]
"jwst.associations.tests" = [
  "data/*.py",
]
"jwst.assign_mtwcs.tests" = ["data/*.*"]
"jwst.assign_wcs.tests" = ["data/*.*"]
"jwst.background.tests" = ["data/*.*"]
"jwst.datamodels.tests" = ["data/*.*"]
"jwst.extract_2d.tests" = ["data/*.*"]
"jwst.lib.src" = [
  "*.c",
]
"jwst.cube_build.src" = [
  "*.c",
]
"jwst.straylight.src" = [
  "*.c",
]
"jwst.transforms" = [
  "resources/schemas/stsci.edu/jwst_pipeline/*.yaml",
]
"jwst.stpipe.resources" = [
  "schemas/*.yaml",
]
"jwst.stpipe.tests" = ["data/*.*"]
"jwst.tweakreg.tests" = ["data/*.*"]
"jwst.wfss_contam.tests" = ["data/*.*"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
