[metadata]
name = jwst
description = Library for calibration of science observations from the James Webb Space Telescope
long_description = Library for calibration of science observations from the James Webb Space Telescope
long_description_content_type = text/plain
author = JWST calibration pipeline developers
license = BSD-3-Clause
url = https://github.com/spacetelescope/jwst
project_urls =
    Tracker = https://github.com/spacetelescope/jwst/issues
    Documentation = https://jwst-pipeline.readthedocs.io/en/stable/
    Source Code = https://github.com/spacetelescope/jwst
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    asdf>=2.12.1
    astropy>=5.0.4
    BayesicFitting>=3.0.1
    certifi==2022.5.18.1
    crds>=11.16.5
    drizzle>=1.13.6
    gwcs>=0.18.0
    numpy>=1.20
    photutils>=1.4.0
    psutil>=5.7.2
    poppy>=1.0.2
    pyparsing>=2.2.1
    requests>=2.22
    scikit-image>=0.17.2
    scipy>=1.6.0
    spherical-geometry>=1.2.22
    stcal>=1.1.0
    stdatamodels>=0.4.3,<1.0
    stpipe>=0.4.1,<1.0
    stsci.image>=2.3.5
    stsci.imagestats>=1.6.3
    tweakwcs>=0.7.2
    asdf-astropy>=0.2.1
    wiimatch>=0.2.1

[options.extras_require]
aws =
    stsci-aws-utils>=0.1.2
docs =
    packaging
    matplotlib
    sphinx
    sphinx-asdf>=0.1.1
    sphinx-astropy
    sphinx-automodapi
    sphinx-rtd-theme
    stsci-rtd-theme
    mistune~=0.8.4
sdp =
    jplephem>=2.9
    pymssql>=2.1.6
    pysiaf>=0.13.0
test =
    ci-watson>=0.5.0
    codecov>=1.6.0
    colorama>=0.4.1
    flake8>=3.6.0
    getch>=1.0.0
    pytest>=6.0.0
    pytest-cov>=2.9.0
    pytest-doctestplus>=0.10.0
    pytest-openfiles>=0.5.0
    requests_mock>=1.0

[options.entry_points]
asdf.extensions =
    jwst_pipeline = jwst.transforms.integration:get_extensions
asdf_extensions =
    jwst_datamodel = jwst.datamodels.extension:DataModelExtension
asdf.resource_mappings =
    jwst_pipeline = jwst.transforms.integration:get_resource_mappings
stpipe.steps =
    jwst = jwst.stpipe.integration:get_steps
pytest11 =
    report_crds_context = pytest_crds.plugin

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[flake8]
select = F, W, E, C
# We should set max line length lower eventually
max-line-length = 130
exclude =
    jwst/extern,
    docs,
    jwst/associations,
    jwst/fits_generator,
    .tox,
    .eggs,
    build
per-file-ignores =
    jwst/ramp_fitting/tests/compare_cr_navg_files.py:E
    jwst/ramp_fitting/tests/compare_crs.py:E
    jwst/ramp_fitting/tests/compare_cr_files.py:E
    jwst/ramp_fitting/tests/create_cube.py:E
    jwst/ramp_fitting/tests/mc_3d.py:E
ignore =
    E231, # Missing whitespace after ',', ';', or ':'
    E241, # Multiple spaces after ','
    W503, # Line break occurred before a binary operator
    W504, # Line break occurred after a binary operator

[tool:pytest]
minversion = 6.0
norecursedirs =
    docs/_build
    docs/exts
    jwst/timeconversion
    jwst/associations/tests/data
    scripts
    .tox
asdf_schema_tests_enabled = true
asdf_schema_validate_default = false
asdf_schema_root = jwst/transforms/resources/schemas jwst/datamodels/schemas
junit_family = xunit2
inputs_root = jwst-pipeline
results_root = jwst-pipeline-results
text_file_format = rst
doctest_plus = enabled
doctest_rst = enabled
addopts = --show-capture=no --open-files --report-crds-context
filterwarnings =
    ignore:Models in math_functions:astropy.utils.exceptions.AstropyUserWarning

[coverage:run]
omit =
    jwst/conftest.py
    jwst/setup.py
    jwst/tests/test*
    jwst/regtest/test*
    jwst/*/tests/*
    docs/*
# And list these again for running against installed version
    */jwst/conftest.py
    */jwst/setup.py
    */jwst/tests/test*
    */jwst/regtest/test*
    */jwst/*/tests/*
    */docs/*

[coverage:report]
exclude_lines =
    pragma: no cover
    if self.debug:
    except ImportError
    raise AssertionError
    raise NotImplementedError
    if __name__ == '__main__':
